<resources>
    <string name="app_name">Mobyra</string>
    <string name="dummy_button">SKIP</string>
    <string name="splash_content">Mobyra</string>
    <string name="splash_sub_content">Biocliq</string>
    <string name="txt_student">Student</string>
    <string name="txt_marks">Marks</string>
    <string name="txt_api_list">APIs List</string>
    <string name="txt_marks_api_list">Marks APIs List</string>
    <string name="txt_students_api_list">Student APIs List</string>
    <string name="txt_host_name">Host name</string>
    <string name="txt_app_name">API App name</string>
    <string name="txt_context_name">API Context name</string>
    <string name="txt_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="login">"Welcome! Login to Mobyra"</string>
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_student">Add Student</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>